Fix all sections elements dimensions and spacing in all viewports dimensions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -619,6 +619,10 @@ p {
     font-size: 2.8rem;
   }
 
+  h5 {
+    font-size: 1.1rem;
+  }
+
   .hide_lg {
     display: none;
   }
@@ -657,6 +661,10 @@ p {
 
   .strategic_planning {
 
+    h3 {
+      font-size: 2rem;
+    }
+
     .row {
       flex-wrap: nowrap;
       justify-content: space-around;
@@ -679,6 +687,48 @@ p {
     img {
       width: 20%;
     }
+
+    h5 {
+      letter-spacing: 0.2rem;
+    }
+  }
+
+  .work_with_us {
+
+    .cta_btn {
+      border-radius: 1.5rem;
+      padding: 0.7rem 3rem
+    }
+  }
+
+  .about_us {
+
+    p {
+      font-size: 1.1rem;
+      line-height: 2.2rem;
+    }
+
+    .row {
+      padding: 4rem 6rem 5rem;
+      gap: 6.5rem;
+    }
+
+    .about_us_quote {
+
+      p {
+        font-size: 1.6rem;
+      }
+
+      img {
+        width: 65%;
+      }
+
+      .p_absolute {
+        top: 10%;
+        left: 57%;
+      }
+    }
+
   }
 
   .cta {
@@ -686,6 +736,13 @@ p {
     .row {
       gap: 0;
       padding: 3rem 20rem 1.5rem;
+    }
+
+    p:first-of-type {
+      font-size: 1rem;
+      line-height: 2rem;
+      padding-left: 2rem;
+      padding-right: 2rem;
     }
   }
 }
